--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
     "gulp": "^3.9.1",
     "gulp-util": "^3.0.7",
     "request":"^2.81.0",
-    "request-promise": "^4.2.0"
+    "request-promise": "^4.2.0",
+    "node-rest-client": "3.1.0"
   }
 }
