--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "application-name",
+  "name": "Parse cucumber feature",
   "version": "0.0.1",
   "dependencies": {
     "gulp": "^3.9.1",
